@@ -1,25 +1,26 @@
 package com.linkedin.datahub.graphql.resolvers.ingest;
 
-import com.datahub.plugins.auth.authorization.Authorizer;
-import com.google.common.collect.ImmutableList;
+import static com.datahub.authorization.AuthUtil.isAuthorizedEntityType;
+import static com.linkedin.metadata.Constants.INGESTION_SOURCE_ENTITY_NAME;
+import static com.linkedin.metadata.Constants.SECRETS_ENTITY_NAME;
+import static com.linkedin.metadata.authorization.ApiOperation.MANAGE;
+
+import com.datahub.authorization.AuthUtil;
 import com.linkedin.datahub.graphql.QueryContext;
-import com.linkedin.metadata.authorization.PoliciesConfig;
+import java.util.List;
 import javax.annotation.Nonnull;
-import static com.linkedin.datahub.graphql.resolvers.AuthUtils.*;
 
 public class IngestionAuthUtils {
 
   public static boolean canManageIngestion(@Nonnull QueryContext context) {
-    final Authorizer authorizer = context.getAuthorizer();
-    final String principal = context.getActorUrn();
-    return isAuthorized(principal, ImmutableList.of(PoliciesConfig.MANAGE_INGESTION_PRIVILEGE.getType()), authorizer);
+    return AuthUtil.isAuthorizedEntityType(
+        context.getOperationContext(), MANAGE, List.of(INGESTION_SOURCE_ENTITY_NAME));
   }
 
   public static boolean canManageSecrets(@Nonnull QueryContext context) {
-    final Authorizer authorizer = context.getAuthorizer();
-    final String principal = context.getActorUrn();
-    return isAuthorized(principal, ImmutableList.of(PoliciesConfig.MANAGE_SECRETS_PRIVILEGE.getType()), authorizer);
+    return isAuthorizedEntityType(
+        context.getOperationContext(), MANAGE, List.of(SECRETS_ENTITY_NAME));
   }
 
-  private IngestionAuthUtils() { }
+  private IngestionAuthUtils() {}
 }
